[package]
name = "transmutation"
version = "0.1.0"
authors = ["[Tony Riemer] <[driemworks@idealabs.network]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
sha3 = { version = "0.10.8", default-features = false }
rs_merkle = { version = "1.4.1", default-features = false }
idl-contract-extension = { git = "https://github.com/ideal-lab5/contracts.git", branch = "tony/dev", default-features = false, features = ["ink-as-dependency"] }
# etf-contract-utils = { git = "", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_env = { version = "5", default-features = false }
ink_e2e = "5.0.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sha3/std",
    "idl-contract-extension/std",
    "rs_merkle/std",
]
ink-as-dependency = []
e2e-tests = []
